Our clients section completed

--- a/index.html
+++ b/index.html
@@ -52,18 +52,24 @@
       </nav>
 
       <!-- banner section -->
-      <section class="bg-primaryColor mb-10 relative -z-20">
+      <section class="bg-primaryColor relative -z-20">
         <!-- radial gradient -->
         <div
-          class="absolute -z-10 w-96 h-96 rounded-full radialGradient left-1/2 -translate-x-1/2 top-10 blur-3xl opacity-80"
+          class="absolute -z-10 w-2/3 h-dvh rounded-full radialGradient left-1/2 -translate-x-1/2 top-10 blur-3xl opacity-80"
         ></div>
         <!-- content -->
         <div
-          class="text-center pt-20 pb-10 flex flex-col justify-center items-center gap-5"
+          class="text-center pt-20 pb-16 flex flex-col justify-center items-center gap-5"
         >
-          <button class="bg-primaryColor p-3 rounded-full border border-gray-700 text-secondaryColor">
-            <span class="text-primaryColor text-sm font-bold bg-secondaryColor rounded-full py-1 px-2">NEW</span>
-            Latest integration just arrived</button>
+          <button
+            class="bg-primaryColor p-3 rounded-full border border-gray-700 text-secondaryColor"
+          >
+            <span
+              class="text-primaryColor text-sm font-bold bg-secondaryColor rounded-full py-1 px-2"
+              >NEW</span
+            >
+            Latest integration just arrived
+          </button>
           <h1 class="text-7xl">
             Boost your <br />
             rankings with AI.
@@ -86,13 +92,295 @@
           <div class="bannerShadoww relative">
             <img class="mx-auto" src="./images/banner.png" alt="" />
             <div
-              class="absolute w-full h-full bg-gradient-to-t from-secondaryColorTt to-transparent top-0"
+              class="absolute w-full h-full bg-gradient-to-t from-primaryColor to-transparent top-0"
             ></div>
           </div>
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <!-- Logo section -->
+      <section class="bg-primaryColor py-10 md:py-16 px-5 md:px-10">
+        <p class="text-base text-center mb-8 text-secondaryTextColor">
+          Trusted by the world’s most innovative teams
+        </p>
+        <div class="max-w-5xl mx-auto grid grid-cols-2 lg:grid-cols-4 gap-2">
+          <div class="border border-gray-700 p-5 rounded-lg">
+            <img class="mx-auto" src="./logo/Acme.png" alt="" />
+          </div>
+          <div class="border border-gray-700 p-5 rounded-lg">
+            <img class="mx-auto" src="./logo/Echo.png" alt="" />
+          </div>
+          <div class="border border-gray-700 p-5 rounded-lg">
+            <img class="mx-auto" src="./logo/quantum.png" alt="" />
+          </div>
+          <div class="border border-gray-700 p-5 rounded-lg">
+            <img class="mx-auto" src="./logo/pulse.png" alt="" />
+          </div>
+          <div class="border border-gray-700 p-5 rounded-lg">
+            <img class="mx-auto" src="./logo/outside.png" alt="" />
+          </div>
+          <div class="border border-gray-700 p-5 rounded-lg">
+            <img class="mx-auto" src="./logo/apex.png" alt="" />
+          </div>
+          <div class="border border-gray-700 p-5 rounded-lg">
+            <img class="mx-auto" src="./logo/celestail.png" alt="" />
+          </div>
+          <div class="border border-gray-700 p-5 rounded-lg">
+            <img class="mx-auto" src="./logo/2twice.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <!-- Harness the power of AI -->
+      <section class="bg-primaryColor pt-10 md:pt-16 px-5 md:px-10">
+        <div class="max-w-xl mx-auto">
+          <h2 class="text-center text-2xl md:text-3xl font-bold">
+            Harness the power of AI, making search engine optimization intuitive
+            and effective for all skill levels.
+          </h2>
+        </div>
+
+        <div class="grid grid-cols-1 gap-3 md:grid-cols-3 mt-10">
+          <!-- card -->
+          <div class="md:col-span-1 border border-gray-700 rounded-xl p-10">
+            <div>
+              <img class="mx-auto" src="./images/Visual.png" alt="" />
+            </div>
+            <div class="space-y-2 mt-5">
+              <h6 class="text-xl font-bold text-gray-300">SEO goal setting</h6>
+              <p class="text-gray-500">
+                Helps you set and achieve SEO goals with guided assistance.
+              </p>
+            </div>
+          </div>
+
+          <!-- image -->
+          <div
+            class="relative col-span-2 bg-gradient-to-t from-secondaryColorTt to-transparent rounded-xl overflow-hidden"
+          >
+            <div class="w-full h-full flex justify-end items-end">
+              <img
+                class="w-[95%] lg:w-[92%]"
+                src="./images/chart2.png"
+                alt=""
+              />
+            </div>
+            <div
+              class="absolute top-0 w-full h-full bg-gradient-to-t from-secondaryColorD to-transparent z-20"
+            ></div>
+            <div class="absolute bottom-7 left-[7%] lg:left-[9%] max-w-72 z-50">
+              <h6 class="text-xl font-bold text-gray-300">
+                User-friendly dashboard
+              </h6>
+              <p class="text-gray-400">
+                Perform complex SEO audits and optimizations with a single
+                click.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- next part -->
+      <section class="bg-primaryColor pb-10 md:pb-16 px-5 md:px-10">
+        <div class="grid grid-cols-1 gap-3 md:grid-cols-3 pt-10">
+          <!-- image -->
+          <div
+            class="relative col-span-2 bg-gradient-to-t from-secondaryColorTt to-transparent rounded-xl overflow-hidden"
+          >
+            <div class="w-full h-full flex justify-center items-end">
+              <img class="w-[95%] lg:w-[92%]" src="./images/chart.png" alt="" />
+            </div>
+            <div
+              class="absolute top-0 w-full h-full bg-gradient-to-t from-secondaryColorD to-transparent z-20"
+            ></div>
+            <div class="absolute bottom-7 left-[7%] lg:left-[9%] max-w-72 z-50">
+              <h6 class="text-xl font-bold text-gray-300">Visual reports</h6>
+              <p class="text-gray-400">
+                Visual insights into your site’s performance.
+              </p>
+            </div>
+          </div>
+
+          <!-- card -->
+          <div class="md:col-span-1 border border-gray-700 rounded-xl p-10">
+            <div>
+              <img class="mx-auto" src="./images/Visual1.png" alt="" />
+            </div>
+            <div class="space-y-2 mt-5">
+              <h6 class="text-xl font-bold text-gray-300">
+                Smart Keyword Generator
+              </h6>
+              <p class="text-gray-500">
+                Automatic suggestions and the best keywords to target.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Elevate your SEO efforts -->
+      <section
+        class="bg-gradient-to-r from-[#1f0638] to-[#0f011b] py-10 md:py-16 px-5 md:px-10 border border-gray-700"
+      >
+        <h2 class="text-3xl md:text-4xl lg:text-6xl text-center font-bold">
+          Elevate your SEO efforts
+        </h2>
+
+        <div
+          class="grid grid-cols-2 md:grid-cols-3 gap-5 md:gap-4 lg:gap-14 max-w-5xl mx-auto mt-8 md:mt-10"
+        >
+          <!-- card one -->
+          <div>
+            <h6 class="text-xl font-bold text-gray-300 mb-2">
+              <!-- <i class="fa-solid fa-list"></i> -->
+              User-friendly dashboard
+            </h6>
+            <p class="text-gray-400">
+              Perform complex SEO audits and optimizations with a single click.
+            </p>
+          </div>
+          <!-- card two -->
+          <div>
+            <h6 class="text-xl font-bold text-gray-300 mb-2">
+              <!-- <i class="fa-solid fa-list"></i> -->
+              User-friendly dashboard
+            </h6>
+            <p class="text-gray-400">
+              Perform complex SEO audits and optimizations with a single click.
+            </p>
+          </div>
+          <!-- card three -->
+          <div>
+            <h6 class="text-xl font-bold text-gray-300 mb-2">
+              <!-- <i class="fa-solid fa-list"></i> -->
+              User-friendly dashboard
+            </h6>
+            <p class="text-gray-400">
+              Perform complex SEO audits and optimizations with a single click.
+            </p>
+          </div>
+          <!-- card four -->
+          <div>
+            <h6 class="text-xl font-bold text-gray-300 mb-2">
+              <!-- <i class="fa-solid fa-list"></i> -->
+              User-friendly dashboard
+            </h6>
+            <p class="text-gray-400">
+              Perform complex SEO audits and optimizations with a single click.
+            </p>
+          </div>
+          <!-- card five -->
+          <div>
+            <h6 class="text-xl font-bold text-gray-300 mb-2">
+              <!-- <i class="fa-solid fa-list"></i> -->
+              User-friendly dashboard
+            </h6>
+            <p class="text-gray-400">
+              Perform complex SEO audits and optimizations with a single click.
+            </p>
+          </div>
+          <!-- card six -->
+          <div>
+            <h6 class="text-xl font-bold text-gray-300 mb-2">
+              <!-- <i class="fa-solid fa-list"></i> -->
+              User-friendly dashboard
+            </h6>
+            <p class="text-gray-400">
+              Perform complex SEO audits and optimizations with a single click.
+            </p>
+          </div>
+          <!-- card seven -->
+          <div>
+            <h6 class="text-xl font-bold text-gray-300 mb-2">
+              <!-- <i class="fa-solid fa-list"></i> -->
+              User-friendly dashboard
+            </h6>
+            <p class="text-gray-400">
+              Perform complex SEO audits and optimizations with a single click.
+            </p>
+          </div>
+          <!-- card eight -->
+          <div>
+            <h6 class="text-xl font-bold text-gray-300 mb-2">
+              <!-- <i class="fa-solid fa-list"></i> -->
+              User-friendly dashboard
+            </h6>
+            <p class="text-gray-400">
+              Perform complex SEO audits and optimizations with a single click.
+            </p>
+          </div>
+          <!-- card nine -->
+          <div>
+            <h6 class="text-xl font-bold text-gray-300 mb-2">
+              <!-- <i class="fa-solid fa-list"></i> -->
+              User-friendly dashboard
+            </h6>
+            <p class="text-gray-400">
+              Perform complex SEO audits and optimizations with a single click.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Our Clients -->
+      <section
+        class="relative bg-primaryColor py-10 md:pt-16 md:pb-28 px-5 md:px-10"
+      >
+        <!-- radial gradient -->
+        <!-- <div
+          class="absolute -z-10 w-2/3 h-dvh rounded-full radialGradient left-1/2 -translate-x-1/2 top-10 blur-3xl opacity-80"
+        ></div> -->
+
+        <!-- content -->
+        <div class="w-full max-w-80 mx-auto">
+          <h2 class="text-3xl md:text-4xl lg:text-6xl text-center mb-3">
+            Our clients
+          </h2>
+          <p class="text-gray-500 text-center text-base">
+            Hear firsthand how our solutions have boosted online success for
+            users like you.
+          </p>
+        </div>
+
+        <!-- client banner -->
+        <div
+          class="mt-28 grid grid-cols-1 md:grid-cols-2 gap-5 md:gap-7 lg:gap-10"
+        >
+          <!-- image -->
+          <div class="flex justify-end">
+            <div class="relative h-[230px] w-[230px]">
+              <div class="absolute w-[800px] top-0 -left-2/3">
+                <img class="w-full" src="./images/line-1.png" alt="" />
+              </div>
+              <div class="absolute w-[800px] bottom-0 -left-2/3">
+                <img class="w-full" src="./images/line-1.png" alt="" />
+              </div>
+              <div class="absolute h-[400px] left-0 top-1/2 -translate-y-1/2">
+                <img class="w-full" src="./images/line-2.png" alt="" />
+              </div>
+              <div class="absolute h-[400px] right-0 top-1/2 -translate-y-1/2">
+                <img class="w-full" src="./images/line-2.png" alt="" />
+              </div>
+              <img class="w-full h-full" src="./images/Avatar.png" alt="" />
+            </div>
+          </div>
+
+          <!-- content -->
+          <div class="flex items-center">
+            <div class="max-w-96">
+              <h3 class="text-xl md:text-2xl text-gray-300 mb-5">
+                ”This product has completely transformed how I manage my
+                projects and deadlines”
+              </h3>
+              <p class="text-base text-gray-300 mb-2">Talia Taylor</p>
+              <p class="text-gray-400">Digital Marketing Director @ Quantum</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
     <!-- JavaScript -->
     <script src="./js/script.js"></script>
