--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <!-- header section started -->
     <header>
       <nav class="bg-primaryColor py-2 border-b-2 border-gray-800">
-        <div class="flex items-center justify-between w-4/6 mx-auto">
+        <div class="flex items-center justify-between lg:w-4/6 px-5 mx-auto">
           <div><img class="min-w-10" src="./logo/Logo.png" alt="" /></div>
           <ul
-            class="flex text-secondaryTextColor border border-gray-600 rounded-full py-2 px-6 space-x-4"
+            class="hidden md:flex text-secondaryTextColor border border-gray-600 rounded-full py-2 px-6 space-x-4"
           >
             <li><a href="">Features</a></li>
             <li><a href="">Developers</a></li>
@@ -70,7 +70,7 @@
             >
             Latest integration just arrived
           </button>
-          <h1 class="text-7xl">
+          <h1 class="text-5xl md:text-7xl">
             Boost your <br />
             rankings with AI.
           </h1>
