Ai-driven SEO section completed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Website</title>
+    <title>Dark challenging project one</title>
     <!-- CSS raw file -->
     <link rel="stylesheet" href="./styles/styles.css" />
     <!-- Google font cdn -->
@@ -222,7 +222,7 @@
 
       <!-- Elevate your SEO efforts -->
       <section
-        class="bg-gradient-to-r from-[#1f0638] to-[#0f011b] py-10 md:py-16 px-5 md:px-10 border border-gray-700"
+        class="bg-gradient-to-r from-[#11041f] to-[#0b0014] py-10 md:py-16 px-5 md:px-10 border border-gray-700"
       >
         <h2 class="text-3xl md:text-4xl lg:text-6xl text-center font-bold">
           Elevate your SEO efforts
@@ -419,7 +419,7 @@
 
           <!-- card one -->
           <div
-            class="bg-black/20 backdrop-blur-sm border border-gray-800 p-5 rounded-xl h-[450px] flex flex-col w-full max-w-72 mx-auto"
+            class="bg-black/20 backdrop-blur-sm border border-gray-800 p-5 rounded-xl h-[460px] flex flex-col w-full max-w-72 mx-auto"
           >
             <div class="border-b border-gray-600 pb-4 mb-5">
               <h3 class="text-2xl text-gray-200 mb-2">Pricing</h3>
@@ -452,7 +452,7 @@
 
           <!-- card two -->
           <div
-            class="bg-black/30 backdrop-blur-sm border border-gray-800 p-5 rounded-xl h-[450px] w-full max-w-72 mx-auto flex flex-col overflow-hidden relative"
+            class="bg-black/30 backdrop-blur-sm border border-gray-800 p-5 rounded-xl h-[460px] w-full max-w-72 mx-auto flex flex-col overflow-hidden relative"
           >
             <div class="border-b border-gray-600 pb-4 mb-5">
               <h3 class="text-2xl text-gray-200 mb-2">Pro</h3>
@@ -500,7 +500,7 @@
 
           <!-- card three -->
           <div
-            class="bg-black/20 backdrop-blur-sm border border-gray-800 p-5 rounded-xl h-[450px] flex flex-col w-full max-w-72 mx-auto"
+            class="bg-black/20 backdrop-blur-sm border border-gray-800 p-5 rounded-xl h-[460px] flex flex-col w-full max-w-72 mx-auto"
           >
             <div class="border-b border-gray-600 pb-4 mb-5">
               <h3 class="text-2xl text-gray-200 mb-2">Business</h3>
@@ -548,6 +548,45 @@
           </div>
         </div>
       </section>
+
+      <!-- AI-driven SEO -->
+      <section
+        class="bg-primaryColor py-10 md:py-16 px-5 md:px-10 relative -z-30"
+      >
+        <div
+          class="border border-gray-700 rounded-xl relative flex items-center justify-center min-h-96 overflow-hidden bg-[url(./images/pattern.png)] -z-20"
+        >
+          <!-- radial gradient under image -->
+          <div
+            class="absolute w-1/2 h-96 rounded-full radialGradient left-1/2 -translate-x-1/2 -top-1/2 blur-3xl -z-10"
+          ></div>
+          <div>
+            <h2 class="text-center text-2xl md:text-4xl font-bold mb-4">
+              AI-driven SEO <br />
+              for everyone
+            </h2>
+            <div class="border border-gray-700 p-2 rounded-lg mb-5">
+              <input
+                class="p-2 bg-transparent rounded-md outline-none"
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Your email"
+              />
+              <input
+                class="bg-white text-gray-700 py-2 px-3 rounded-md"
+                type="submit"
+                value="Join waitlist"
+              />
+            </div>
+            <p class="text-gray-400 text-center">
+              No credit card required - 7-days free trial
+            </p>
+          </div>
+        </div>
+      </section>
+
+      
     </main>
     <footer></footer>
     <!-- JavaScript -->
