Problem solved again

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                 Monthly reports
               </p>
             </div>
-            <div class="border border-gray-700 p-1 rounded-md">
+            <div class="border border-gray-700 p-1 rounded-md mt-4">
               <button class="bg-gray-700 py-1 w-full rounded-md insideShadow">
                 Join Waitlist
               </button>
@@ -484,7 +484,7 @@
                 Link optimization
               </p>
             </div>
-            <div class="border border-gray-700 p-1 rounded-md">
+            <div class="border border-gray-700 p-1 rounded-md mt-4">
               <button
                 class="bg-secondaryColor py-1 w-full rounded-md insideShadow"
               >
@@ -540,7 +540,7 @@
                 API integration
               </p>
             </div>
-            <div class="border border-gray-700 p-1 rounded-md">
+            <div class="border border-gray-700 p-1 rounded-md mt-4">
               <button class="bg-gray-700 py-1 w-full rounded-md insideShadow">
                 Join Waitlist
               </button>
