Footer section completed

--- a/index.html
+++ b/index.html
@@ -582,14 +582,77 @@
               />
             </div>
             <p class="text-gray-400 text-center">
-              No credit card required <br class="md:hidden" />
-              - 7-days free trial
+              No credit card required -
+              <!-- <br class="md:hidden" /> -->
+              7-days free trial
             </p>
           </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="bg-primaryColor py-10 md:py-16 px-5 md:px-10 relative -z-30">
+      <div class="md:flex justify-between">
+        <!-- first part -->
+        <div
+          class="flex items-center justify-between gap-5 md:flex-col mb-7 md:mb-0"
+        >
+          <div class="flex items-center justify-center gap-3">
+            <img src="./logo/Logo.png" alt="" />
+            <p class="text-base text-gray-300">AI Startup Kit</p>
+          </div>
+          <div class="space-x-2 text-gray-400 text-xl">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-youtube"></i>
+          </div>
+        </div>
+
+        <!-- second part -->
+        <div class="w-1/2">
+          <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+            <div>
+              <p class="text-xl text-gray-200 mb-4">Product</p>
+              <ul class="text-gray-400 space-y-3">
+                <li><a href="">Features</a></li>
+                <li><a href="">Integration</a></li>
+                <li><a href="">Updates</a></li>
+                <li><a href="">FAQ</a></li>
+                <li><a href="">Pricing</a></li>
+              </ul>
+            </div>
+            <div>
+              <p class="text-xl text-gray-200 mb-4">Company</p>
+              <ul class="text-gray-400 space-y-3">
+                <li><a href="">About</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Careers</a></li>
+                <li><a href="">Manifesto</a></li>
+                <li><a href="">Press</a></li>
+                <li><a href="">Contract</a></li>
+              </ul>
+            </div>
+            <div>
+              <p class="text-xl text-gray-200 mb-4">Resources</p>
+              <ul class="text-gray-400 space-y-3">
+                <li><a href="">Examples</a></li>
+                <li><a href="">Community</a></li>
+                <li><a href="">Guides</a></li>
+                <li><a href="">Docs</a></li>
+                <li><a href="">Press</a></li>
+              </ul>
+            </div>
+            <div>
+              <p class="text-xl text-gray-200 mb-4">Legal</p>
+              <ul class="text-gray-400 space-y-3">
+                <li><a href="">Privacy</a></li>
+                <li><a href="">Terms</a></li>
+                <li><a href="">Security</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- JavaScript -->
     <script src="./js/script.js"></script>
   </body>
