--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
         </div>
 
         <!-- second part -->
-        <div class="w-1/2">
+        <div class="w-full md:w-2/3 lg:w-1/2">
           <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
             <div>
               <p class="text-xl text-gray-200 mb-4">Product</p>
